<resources>
    <string name="app_name">BookBnB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Book BnB</string>
    <string name="nav_header_subtitle">Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ping_btn">Ping!</string>
    <string name="menu_publicaciones">Publicaciones</string>
    <string name="password_hint">Contraseña</string>
    <string name="username_hint">Usuario</string>
    <string name="login_btn">Ingresar</string>
    <string name="register_btn">Registrarse</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_nueva">nueva</string>
    <string name="title_activity_test">test</string>
    <string name="home_label">Home</string>
    <string name="publicaciones_label">Publicaciones</string>
    <string name="login_label">Login</string>
    <string name="registrar_label">¿No tenés cuenta? Registrate</string>
    <string name="register_title">Registro</string>
    <string name="email_lbl">Correo electrónico*</string>
    <string name="nombre_lbl">Nombre*</string>
    <string name="apellido_lbl">Apellido*</string>
    <string name="telefono_lbl">Teléfono</string>
    <string name="ciudad_lbl">Ciudad</string>
    <string name="user_type_huesped">Huesped</string>
    <string name="user_type_anfitrion">Anfitrión</string>
    <string name="contraseña_lbl">Contraseña*</string>
    <string name="confirmar_contraseña_lbl">Confirmar contraseña*</string>
    <string name="register_button_lbl">Registrarme</string>
    <string name="network_error_msg">Ocurrió un error al conectarse con el servidor. Por favor, intentelo nuevamente más tarde</string>
    <string name="required_helper_text">*Obligatorio</string>
    <string name="correo_helper_txt">Este será su usuario para ingresar al sistema.</string>
    <string name="tipo_de_usuario_lbl">Tipo de Usuario</string>
    <string name="title_activity_anfitrion">AnfitrionActivity</string>
    <string name="error_inesperado_txt">Ocurrió un error inesperado. Por favor, vuelva a intentarlo nuevamente. En caso de persistir, pongase en contacto con un administrador.</string>
    <string name="completed_register_txt">Registro completado. Por favor, ingrese sus crendeciales en el login.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nueva_publicacion_txt">Nueva publicación</string>
    <string name="continue_txt">Continuar</string>
    <string name="new_publicacion_first_step_txt">Primer paso: Ingrese el título de su alojamiento, una breve descripción del mismo y el precio por noche (en ETH) que se cobrará por su uso</string>
    <string name="titulo_lbl">Título</string>
    <string name="descripcion_lbl">Descripción</string>
    <string name="eth_shortname">ETH Por Noche</string>
    <string name="price_lbl">Precio</string>
    <string name="ubicacion_lbl">Ubicación</string>
    <string name="fotos_lbl">Fotografías</string>
    <string name="no_location_selected_txt">Error: No seleccionó una ubicación. Ingrese una ubicación para continuar.</string>
    <string name="search">Buscar</string>
    <string name="busqueda_location">Indique la ciudad a donde le gustaría alojarse.</string>
    <string name="imagen">imagen</string>
    <string name="see_detail_txt">Ver detalle</string>
    <string name="no_images_selected_txt">Error: No seleccionó fotografías de su alojamiento. Ingrese al menos una para continuar.</string>
    <string name="gallery_dialog_title">Selección de fotos</string>
    <string name="gallery_dialog_instructions1">¡Agregá hasta 5 fotos de tu alojamiento para que los huespedes las vean!</string>
    <string name="gallery_dialog_instructions2">Asegurate de que se vean claras y describan los distintos ambientes/servicios que posee tu alojamiento.</string>
    <string name="new_publicacion_step3_explanation">Paso 3: Seleccione las fotografías más importantes de su alojamiento para que los futuros huespedes puedan verlas.</string>
    <string name="publicar_lbl">Publicar</string>
    <string name="publicando_txt">Publicando alojamiento... Por favor, espere.</string>
    <string name="precio_format">%s ETH/Noche</string>
    <string name="rango_precio_format">(Entre %s ETH/Noche y %s ETH/Noche)</string>
    <string name="nombre_huesped_reserva">Huesped: %s</string>
    <string name="precio_total_reserva">Precio total: %s ETH</string>
    <string name="codigo_reserva">Código reserva: %s</string>
    <string name="estado_reserva">Estado: %s</string>
    <string name="precio_total_format">El precio total es %s ETH</string>
    <string name="precio_detail_format">$ %s por noche</string>
    <string name="google_register_format">Bienvenido %s, como es tu primera vez necesitamos saber ¿Querés ser huesped o anfitrión?</string>
    <string name="cant_huespedes_format">Hasta %s huespedes</string>
    <string name="preview_step_help">Paso 4: Revise todos los datos que ingresó para finalizar la publicación de su alojamiento.</string>
    <string name="previsualizacion_lbl">Previsualización</string>
    <string name="resultados_lbl">Resultados</string>
    <string name="huesped_activity_label">HuespedActivity</string>
    <string name="detalle_publicacion_title">Detalle Publicación</string>
    <string name="explorar_btn_txt">EXPLORAR</string>
    <string name="reservar_lbl">RESERVAR</string>
    <string name="reserva_realizada_lbl">Reserva Realizada</string>
    <string name="cerrar_sesion_lbl">Cerrar sesión</string>
    <string name="detalle_publicacion_anfitrion_title">Detalle Publicación</string>
    <string name="cant_de_huespedes_lbl">Cant. de huespedes</string>
    <string name="tipo_de_alojamiento_lbl">Tipo de alojamiento</string>
    <string name="busqueda_lbl">Búsqueda</string>
    <string name="web_client_id">738276482581-7phs1oj31pplvh2n5c87d15mfos2791u.apps.googleusercontent.com</string>
    <string name="ingresa_con_otros_txt">O Ingresá con</string>
    <string name="ingresa_con_google_lbl">Ingresar con Google</string>
    <string name="que_queres_saber_text">¿Que querés saber? Preguntale al anfitrión</string>
    <string name="preguntas_title">Preguntas y respuestas</string>
    <string name="preguntar_btn_txt">Preguntar</string>
    <string name="ultimas_preguntas_txt">Últimas preguntas</string>
    <string name="no_hay_preguntas_txt">Por el momento nadie realizó preguntas. ¡Se el primero!</string>
    <string name="preguntas_subtitle_anfitrion">Aquí se ven las preguntas que le han realizado los huespedes con sus respuestas</string>
    <string name="no_hay_preguntas_anfitrion">Por el momento no hay preguntas para esta publicación</string>
    <string name="responder_pregunta_txt">Responder</string>
    <string name="responder_consulta_txt">Responder Consulta</string>
    <string name="enviar_mensaje_directo_btn">Enviar Mensaje Directo</string>
    <string name="enviar_mensaje_directo_desc">¿Preferís una conversación privada? ¡Enviale un mensaje directo!</string>
    <string name="reservas_label">Reservas</string>
    <string name="ver_reservas_lbl">Ver reservas</string>
    <string name="listaReservas_lbl">Reservas</string>
    <string name="reservas_aceptas_tab_title">Aceptadas</string>
    <string name="reservas_pendientes_tab_title">Pendientes</string>
    <string name="confirmar_reserva_aceptada">¿Esta seguro de que desea aceptar la reserva {}?</string>
    <string name="reserva_aceptada">Reserva {} aceptada</string>
    <string name="aceptar_reserva_btn">Aceptar</string>
    <string name="reserva_aceptada_format">¡Hecho! La reserva con código %s fue aceptada. Tenga en cuenta que esto podría demorar unos minutos para impactar en nuestras bases de datos.</string>
    <string name="aceptar_reserva_format">¿Está seguro que desea aceptar la reserva %s? Esto rechazará todas las pendientes que se solapen con la aceptada.</string>
    <string name="cancelar_reserva_format">¿Está seguro que desea cancelar la reserva %s? En caso de confirmar, no podrá revertir esta acción.</string>
    <string name="rechazar_reserva_format">¿Está seguro que desea rechazar la reserva %s? En caso de confirmar, no podrá revertir esta acción y el huesped será informado.</string>
    <string name="messages_lbl">Mensajes</string>
    <string name="emptyBusquedaText">¡Oops! No se encontraron alojamientos publicados con esos criterios... ¿Quizás es el destino que quiere que vaya a otro destino?</string>
    <string name="emptyChatsText">Todavia no hay conversaciones mediante mensajes directos...</string>
    <string name="mis_reservas_text">Mis Reservas</string>
    <string name="busqueda_text">Indique los parametros de su búsqueda para poder brindarle las opciones adecuadas a sus necesidades</string>
    <string name="busqueda_hint">Ciudad de Mendoza, Mendoza, Argentina</string>
    <string name="cantidad_huespedes_text">Cantidad de huespedes</string>
    <string name="checkin_hint">Check In</string>
    <string name="checkout_hint">Check Out</string>
    <string name="seleccion_fechas_text">Seleccione la fecha de llegada y de salida</string>
    <string name="reservas_proximas_tab_text">Próximas</string>
    <string name="reservas_anteriores_tab_text">Anteriores</string>
    <string name="calificar_text">Calificar</string>
    <string name="calificacion_dialog_title">Calificación</string>
    <string name="calificacion_dialog_explanation">Calificá este alojamiento en base a tu experiencia. Tené en cuenta que el anfitrión y otros huespedes podrán ver tu calificación.</string>
    <string name="reseña_text">Reseña</string>
    <string name="valoraciones_text">Calificaciones</string>
    <string name="valoraciones_subtitle">En esta sección se podrán ver las valoraciones proporcionadas por otros huespedes</string>
    <string name="no_hay_calificaciones_text">Por el momento no hay calificaciones.</string>
    <string name="perfil_text">Mi Perfil</string>
    <string name="nombre_perfil">Nombre</string>
    <string name="email_perfil">Email</string>
    <string name="telefono_perfil">Teléfono</string>
    <string name="ciudad_perfil">Ciudad</string>
    <string name="no_hay_publicaciones_text">No hay publicaciones añadidas</string>
    <string name="cancelar_text_btn">Cancelar</string>
    <string name="rechazar_btn_text">Rechazar</string>
    <string name="forgot_password_text">¿Olvidó su contraseña? Haga click aquí</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password_body_2">¡No se preocupe! Se le enviarán instrucciones para recuperar su contraseña, por favor ingrese su email</string>
    <string name="forgot_password_body_1">¿Se encuentra usted pensando como Homero dado que olvidó su contraseña?</string>
    <string name="ver_perfil_anfitrion_btn">Ver perfil anfitrión</string>
    <string name="home_huesped_escapate_desc">Encontra tu alojamiento ideal de manera sencilla, directa y en unos simples pasos.</string>
    <string name="home_recomendaciones_title">Recomendaciones</string>
</resources>