<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/perfil_fragment"
            android:icon="@drawable/ic_user_24"
            android:title="@string/perfil_text" />
        <item
            android:id="@+id/nav_publicaciones"
            android:icon="@drawable/ic_book_24"
            android:title="@string/publicaciones_label" />
        <item
            android:id="@+id/chats_fragment"
            android:icon="@drawable/ic_email_24"
            android:title="@string/messages_lbl" />
    </group>
</menu>