<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_huesped"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/chats_fragment"
            android:icon="@drawable/ic_email_24"
            android:title="@string/messages_lbl" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/huesped_reservas_fragment"
            android:icon="@drawable/ic_hotel_24"
            android:title="@string/mis_reservas_text" />
    </group>
</menu>