<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bookbnb.ui.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_publicaciones"
        android:name="com.example.bookbnb.ui.publicaciones.PublicacionesFragment"
        android:label="@string/publicaciones_label"
        tools:layout="@layout/fragment_publicaciones_list" >
        <action
            android:id="@+id/action_nav_publicaciones_to_nuevaPublicacionFragment"
            app:destination="@id/nuevaPublicacionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_publicaciones_to_detallePublicacionAnfitrionFragment"
            app:destination="@id/navigation"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right">
            <argument
                android:name="publicacionId"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/nuevaPublicacionFragment"
        android:name="com.example.bookbnb.ui.publicaciones.NuevaPublicacionInfoFragment"
        android:label="@string/nueva_publicacion_txt"
        tools:layout="@layout/fragment_nueva_publicacion_info" >
        <action
            android:id="@+id/action_nuevaPublicacionFragment_to_nuevaPublicacionLocationFragment"
            app:destination="@id/nuevaPublicacionLocationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/nuevaPublicacionLocationFragment"
        android:name="com.example.bookbnb.ui.publicaciones.NuevaPublicacionLocationFragment"
        android:label="@string/ubicacion_lbl"
        tools:layout="@layout/fragment_nueva_publicacion_location" >
        <action
            android:id="@+id/action_nuevaPublicacionLocationFragment_to_nuevaPublicacionImagesFragment"
            app:destination="@id/nuevaPublicacionImagesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/nuevaPublicacionImagesFragment"
        android:name="com.example.bookbnb.ui.publicaciones.NuevaPublicacionImagesFragment"
        android:label="@string/fotos_lbl"
        tools:layout="@layout/fragment_nueva_publicacion_images" >
        <action
            android:id="@+id/action_nuevaPublicacionImagesFragment_to_nuevaPublicacionPreviewFragment"
            app:destination="@id/nuevaPublicacionPreviewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/nuevaPublicacionPreviewFragment"
        android:name="com.example.bookbnb.ui.publicaciones.NuevaPublicacionPreviewFragment"
        android:label="@string/previsualizacion_lbl" >
        <action
            android:id="@+id/action_nuevaPublicacionPreviewFragment_to_nav_publicaciones"
            app:destination="@id/nav_publicaciones"
            app:popUpTo="@id/nav_publicaciones"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/chats_fragment"
        android:name="com.example.bookbnb.ui.chat.ChatsFragment"
        android:label="Chats">
        <action
            android:id="@+id/action_chats_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.bookbnb.ui.chat.ChatFragment"
        android:label="Chat">
        <argument
            android:name="userHuespedId"
            app:argType="string" />
        <argument
            android:name="userAnfitrionId"
            app:argType="string" />
        <deepLink
            android:id="@+id/deepLink3"
            app:action="ACTION_VIEW"
            app:uri="https://www.bookbnb.com/chat/{chatId}" />
    </fragment>
    <fragment
        android:id="@+id/perfil_fragment"
        android:name="com.example.bookbnb.ui.perfil.PerfilFragment"
        android:label="Mi Perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_perfil_fragment_to_editarPerfilFragment"
            app:destination="@id/editarPerfilFragment" />
    </fragment>
    <navigation
        android:id="@+id/navigation"
        app:startDestination="@id/detallePublicacionAnfitrionFragment">
        <fragment
            android:id="@+id/detallePublicacionAnfitrionFragment"
            android:name="com.example.bookbnb.ui.publicaciones.DetallePublicacionAnfitrionFragment"
            android:label="@string/detalle_publicacion_anfitrion_title"
            tools:layout="@layout/fragment_detalle_publicacion_anfitrion">
            <argument
                android:name="publicacionId"
                app:argType="string" />
            <action
                android:id="@+id/action_detallePublicacionAnfitrionFragment_to_pagerListasReservasFragment"
                app:destination="@id/pagerListasReservasFragment" />
        </fragment>
        <fragment
            android:id="@+id/pagerListasReservasFragment"
            android:name="com.example.bookbnb.ui.reservas.PagerListasReservasFragment"
            android:label="Reservas">
            <argument
                android:name="publicacionId"
                app:argType="string" />
            <deepLink
                android:id="@+id/deepLink"
                app:action="ACTION_VIEW"
                app:uri="www.bookbnb.com/anfitrion/publicacion/{publicacionId}/reservas" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/editarPerfilFragment"
        android:name="com.example.bookbnb.ui.perfil.EditarPerfilFragment"
        android:label="Editar Perfil" >
        <action
            android:id="@+id/action_editarPerfilFragment_to_perfil_fragment"
            app:destination="@id/perfil_fragment"
            app:popUpTo="@id/perfil_fragment" />
    </fragment>
</navigation>