<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.example.bookbnb.viewmodels.NuevaPublicacionViewModel.FormErrors" />
        <variable
            name="nuevaPublicacionViewModel"
            type="com.example.bookbnb.viewmodels.NuevaPublicacionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.publicaciones.NuevaPublicacionInfoFragment">
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/secondaryLightColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nueva_publicacion_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/new_publicacion_first_step_txt"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="bold" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titulo_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:ems="10"
            android:hint="@string/titulo_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:errorText='@{nuevaPublicacionViewModel.formErrors.contains(FormErrors.MISSING_TITULO) ? "Ingrese un título" : ""}'>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publicacion_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={nuevaPublicacionViewModel.titulo}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcion_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:ems="10"
            android:hint="@string/descripcion_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo_text_field"
            app:errorText='@{nuevaPublicacionViewModel.formErrors.contains(FormErrors.MISSING_DESC) ? "Ingrese una descripción" : ""}'>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publicacion_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:text="@={nuevaPublicacionViewModel.desc}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:ems="10"
            android:hint="@string/price_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_text_field"
            app:suffixText="@string/eth_shortname"
            app:errorText='@{nuevaPublicacionViewModel.formErrors.contains(FormErrors.INVALID_PRICE) ? "Ingrese un precio válido" : ""}'>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publicacion_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={nuevaPublicacionViewModel.price}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/continue_txt"
            android:onClick="@{() -> nuevaPublicacionViewModel.onNavigateToMapStep()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>